<resources>
    <string name="app_name">ToDo App</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="task">Task:</string>
    <string name="subTasks">Sub tasks:</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="shareUsing">Share using</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="email_example">email@email.com</string>
    <string name="password">password</string>
    <string name="have_account">Already registered?</string>
    <string name="not_registered">Not yet registered?</string>
    <string name="log_out">Log out</string>
    <string name="goBack">Return</string>
    <string name="edit">Edit</string>
    <string name="icon">Icon:</string>
    <string name="select">Click to select</string>
    <string name="photo">Additional photo:</string>
    <string name="take_photo">Photo</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delPopUpTitle">Deleting task</string>
    <string name="delPopUpTextMessage">Are you sure you want to delete this task?</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Registration</string>
</resources>