<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DisplayFragment">

    <EditText
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:editable="false"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/taskNameTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="text|textMultiLine"
        android:lines="4"
        app:layout_constraintEnd_toEndOf="@+id/taskName"
        app:layout_constraintStart_toStartOf="@+id/taskName"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />

    <ImageView
        android:id="@+id/imageTask"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/subTasks"
        app:layout_constraintTop_toBottomOf="@+id/subTasks"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/taskNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/task"
        app:layout_constraintBaseline_toBaselineOf="@+id/taskName"
        app:layout_constraintEnd_toStartOf="@+id/taskName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subTasksTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTasks"
        app:layout_constraintBaseline_toBaselineOf="@+id/subTasks"
        app:layout_constraintStart_toStartOf="@+id/taskNameTitle" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/btnReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnShare"
        app:layout_constraintTop_toTopOf="@+id/btnReturn" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/goBack"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTask" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="@+id/btnReturn"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnReturn"
        app:layout_constraintTop_toTopOf="@+id/btnReturn" />

    <TextView
        android:id="@+id/iconTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon"
        app:layout_constraintStart_toStartOf="@+id/subTasksTitle"
        app:layout_constraintTop_toTopOf="@+id/imageTask" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePhoto"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/titlePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/photo"
        app:layout_constraintStart_toStartOf="@+id/subTasksTitle"
        app:layout_constraintTop_toBottomOf="@+id/btnReturn" />
</androidx.constraintlayout.widget.ConstraintLayout>